# health_lifestyle_diabetes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: paths.yaml  preprocessing.yaml  splitter.yaml  training.yaml
models/: catboost_diabetes_classifier.cbm
note/: note_000.md  note_001.md  note_001_matrice_confusion.md  note_002.md  note_003.md  note_004.md  note_005.md  note_006.md  note_007.md  note_008.md  note_009.md  note_010.md  note_011.md  note_012.md  note_013.md  note_014.md
notebook/: 01_load.ipynb  02_feature_engineering.ipynb  03_experiment.ipynb  04_model_training.ipynb  05_log_mlflow_training.ipynb  06_boosting_calibration.ipynb  07_selection_features.ipynb  08_api_test.ipynb  09_apply_use_case.ipynb  10_experiments_models.ipynb  apply_use_case.ipynb
src/health_lifestyle_diabetes/application/dto/: prediction_request_dto.py
src/health_lifestyle_diabetes/application/services/: calibration_plot_service.py  calibration_service.py  confusion_matrix_service.py  dataframe_streamer_service.py  evaluation_service.py  experiment_tracking_service.py
src/health_lifestyle_diabetes/application/use_cases/: apply_feature_engineering_uc.py  build_features_use_case.py  evaluate_and_accept_model.py  evaluate_model.py  evaluate_model_uc.py  load_dataset_use_case.py  perform_eda_uc.py  predict_patient_uc.py  split_dataset_uc.py  split_dataset_use_case.py  split_dataset_use_case_olds.py  train_model_mlflow_uc.py  train_model_uc.py
src/health_lifestyle_diabetes/domain/entities/: confusion_matrix_config.py  confusion_matrix_result.py  decision_threshold_policy.py  diabetes_prediction.py  evaluation_results.py  features_schema.py  patient_profile.py
src/health_lifestyle_diabetes/domain/ports/: __init__.py  calibration_plot_port.py  calibrator_port.py  confusion_matrix_plot_port.py  confusion_matrix_port.py  dataframe_streamer_port.py  dataset_repository.py  dataset_repository_port.py  dataset_splitter_port.py  eda_service_port.py  experiment_tracking_port.py  feature_engineering_port.py  feature_importance_port.py  logger_port.py  metrics_plotter_port.py  metrics_port.py  model_repository_port.py  model_trainer_port.py  prediction_model_port.py  trainer_factory_port.py
src/health_lifestyle_diabetes/domain/services/: calibration_service.py  confusion_matrix_service.py  evaluation_service.py  experiment_tracking_service.py  feature_validator_service.py  prediction_service.py  threshold_service.py
src/health_lifestyle_diabetes/infrastructure/calibration/: sklearn_calibrator.py
src/health_lifestyle_diabetes/infrastructure/data_sources/: csv_dataset_repository.py
src/health_lifestyle_diabetes/infrastructure/feature_engineering/: base_preprocessing.py  behavioral_features.py  clinical_features.py  demographics_features.py  exclusion.py  lifestyle_features.py  medical_features.py  metabolic_features.py  pipeline_feature_engineering.py
src/health_lifestyle_diabetes/infrastructure/feature_importance/: boosting_feature_importance_adapter.py
src/health_lifestyle_diabetes/infrastructure/features_selections/: features_selection.py
src/health_lifestyle_diabetes/infrastructure/logger/: config.py  loguru_logger.py
src/health_lifestyle_diabetes/infrastructure/logging/: loguru_logger_adapter.py
src/health_lifestyle_diabetes/infrastructure/metrics/: sklearn_metrics_adapter.py
src/health_lifestyle_diabetes/infrastructure/ml/: dataset_splitter.py
src/health_lifestyle_diabetes/infrastructure/ml/eda/: __init__.py  categorical_analysis.py  dataset_summary.py  eda_service.py  numeric_analysis.py
src/health_lifestyle_diabetes/infrastructure/ml/evaluation/: classification_evaluator.py  confusion_matrix_plotter.py  learning_curve_plotter.py  model_evaluator.py  probability_plotter.py
src/health_lifestyle_diabetes/infrastructure/ml/feature_engineering/: base_preprocessing.py  behavioral_features.py  clinical_features.py  demographics_features.py  exclusion.py  lifestyle_features.py  medical_features.py  metabolic_features.py  pipeline_feature_engineering.py
src/health_lifestyle_diabetes/infrastructure/ml/metrics/: sklearn_confusion_adapter.py  sklearn_metrics_adapter.py
src/health_lifestyle_diabetes/infrastructure/ml/model_trainers/: catboost_trainer.py  catboost_trainer_v1.py  random_forest_trainer.py  trainer_factory.py  xgboost_trainer.py  xgboost_trainer_v1.py
src/health_lifestyle_diabetes/infrastructure/ml/splitters/: sklearn_splitter.py
src/health_lifestyle_diabetes/infrastructure/model_trainers/: catboost_trainer.py  lightgbm_trainer.py  xgboost_trainer.py
src/health_lifestyle_diabetes/infrastructure/splitters/: sklearn_splitter.py
src/health_lifestyle_diabetes/infrastructure/streaming/: pandas_dataframe_streamer.py
src/health_lifestyle_diabetes/infrastructure/tracking/: mlflow_adapter.py  mlflow_setup.py  mlflow_tracker.py  run_name_generator.py
src/health_lifestyle_diabetes/infrastructure/training_diagnostics/: diagnostics.py  metrics_extractor.py  saver.py
src/health_lifestyle_diabetes/infrastructure/training_diagnostics/plotters/: base.py  matplotlib.py  plotly.py
src/health_lifestyle_diabetes/infrastructure/utils/: __init__.py  config_loader.py  exceptions.py  logger.py  logger_adapter.py  mlflow_setup.py  sklearn_splitter.py
src/health_lifestyle_diabetes/infrastructure/visualization/: calibration_matplotlib_adapter.py  confusion_matrix_matplotlib_adapter.py  confusion_matrix_plotter.py  feature_importance_plotter.py  matplotlib_metrics_plotter.py  plotly_metrics_plotter.py
src/health_lifestyle_diabetes/presentation/api/: fastapi_app.py
src/health_lifestyle_diabetes/presentation/api/config/: cors.py
src/health_lifestyle_diabetes/presentation/api/middlewares/: logging_middleware.py
src/health_lifestyle_diabetes/presentation/api/routers/: health_router.py
src/health_lifestyle_diabetes/presentation/api/schemas/: __init__.py
src/health_lifestyle_diabetes/presentation/streamlit/: dashboard.py
tests/: conftest.py  test_perform_eda_uc.py
(+5 files in other folders)
