[tool.poetry]
name = "health-lifestyle-diabetes"
version = "0.1.0"
description = "Clean architecture project for diabetes prediction using health & lifestyle data."
authors = ["Manda Surel <s239150.eps@gmail.com>"]
readme = "README.md"

# Code source placé dans src/
packages = [
    { include = "health_lifestyle_diabetes", from = "src" },
]

# ======================================================
#               📦 DÉPENDANCES PRINCIPALES
# ======================================================
[tool.poetry.dependencies]
python = "^3.10"

# Scientific stack
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"

# Machine Learning
xgboost = "^2.0.0"
catboost = "^1.2.0"

# Configuration & validation
pyyaml = "^6.0.0"
pydantic = "^2.7.0"

# API & CLI
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
click = "^8.1.0"

# Dashboard / UI
streamlit = "^1.37.0"

# Logging
loguru = "^0.7.0"

# Experiment tracking & optimisation
mlflow = "^3.7.0"
optuna = "^4.6.0"

# Visualisation
seaborn = "^0.13.2"
kaleido = "^1.2.0"

# Notebook
nbformat = "^5.10.4"

# ======================================================
#               🛠️ DÉPENDANCES DEVELOPPEMENT
# ======================================================
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
taskipy = "^1.14.1"

# ======================================================
#               🎨 CONFIGURATION : BLACK
# ======================================================
types-pyyaml = "^6.0.12.20250915"
[tool.black]
line-length = 88
target-version = ["py310"]

# ======================================================
#               🧹 CONFIGURATION : RUFF
# ======================================================
[tool.ruff]
line-length = 88
target-version = "py310"

# Nouveau standard Ruff (2024+)
[tool.ruff.lint]
select = ["E", "F", "W", "I"]      # Errors, Flake8 rules, warnings, import-sort
ignore = ["E501"]                  # Ligne trop longue → gérée par Black

# ======================================================
#               🧠 CONFIGURATION : MYPY
# ======================================================
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_generics = false

# ======================================================
#               🚀 COMMANDES POETRY
# ======================================================
[tool.poetry.scripts]
format = "black:main"

# ======================================================
#               🧰 TASKIPY : AUTOMATION
# ======================================================
[tool.taskipy.tasks]

# 🔧 Formatage du code
format = "black ."

# 🧹 Lint simple
lint = "ruff check ."

# 🛠️ Fix automatique (Ruff + Black)
fix = "ruff check . --fix && black ."

# 🔎 Vérification des types
typecheck = "mypy src/"

# 🎯 Pipeline qualité complète
quality = "task fix && task lint && task typecheck"

# ======================================================
#               🏗️ BUILD SYSTEM
# ======================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
