# ======================================================
# 📦 PROJECT METADATA (Poetry)
# ======================================================
[tool.poetry]
name = "health-lifestyle-diabetes"
version = "0.1.0"
description = "Clean Architecture project for diabetes prediction using health & lifestyle data."
authors = ["Manda Surel <s239150.eps@gmail.com>"]
readme = "README.md"

# Déclare explicitement que le code source est dans /src
packages = [
    { include = "health_lifestyle_diabetes", from = "src" },
]

# ======================================================
# 🐍 RUNTIME DEPENDENCIES (Production)
# ======================================================
[tool.poetry.dependencies]

# Version Python supportée
python = "^3.10"

# ------------------------------------------------------
# 📊 Scientific computing & data manipulation
# ------------------------------------------------------
numpy = "^1.26.0"
pandas = "^2.2.0"

# Machine Learning utilities
scikit-learn = "^1.4.0"

# ------------------------------------------------------
# 🤖 Machine Learning models
# ------------------------------------------------------
xgboost = "^2.0.0"
catboost = "^1.2.0"

# ------------------------------------------------------
# ⚙️ Configuration & validation
# ------------------------------------------------------
pyyaml = "^6.0.0"     # Chargement de fichiers YAML
pydantic = "^2.7.0"   # Validation & typage fort des configs / DTO

# ------------------------------------------------------
# 🌐 API & CLI
# ------------------------------------------------------
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
click = "^8.1.0"

# ------------------------------------------------------
# 📈 UI & dashboards
# ------------------------------------------------------
streamlit = "^1.37.0"

# ------------------------------------------------------
# 🪵 Logging
# ------------------------------------------------------
loguru = "^0.7.0"

# ------------------------------------------------------
# 🧪 Experiment tracking & hyperparameter tuning
# ------------------------------------------------------
mlflow = "^3.7.0"
optuna = "^4.6.0"

# ------------------------------------------------------
# 📊 Visualization
# ------------------------------------------------------
seaborn = "^0.13.2"
kaleido = "^1.2.0"    # Export Plotly figures (PNG / PDF)

# ------------------------------------------------------
# 📓 Notebook support
# ------------------------------------------------------
nbformat = "^5.10.4"

# ======================================================
# 🛠️ DEVELOPMENT DEPENDENCIES (Dev only)
# ======================================================
[tool.poetry.group.dev.dependencies]

# Tests
pytest = "^8.0.0"

# Formatting & linting
black = "^24.0.0"
ruff = "^0.5.0"
isort = "^7.0.0"

# Static typing
mypy = "^1.10.0"

# Task runner
taskipy = "^1.14.1"

# ======================================================
# 🎨 ISORT CONFIGURATION
# ======================================================
[tool.isort]
profile = "black"                        # Compatibilité Black
line_length = 88
known_first_party = ["health_lifestyle_diabetes"]

# ======================================================
# 🎨 BLACK CONFIGURATION
# ======================================================
[tool.black]
line-length = 88
target-version = ["py310"]

# ======================================================
# 🧹 RUFF CONFIGURATION
# ======================================================
[tool.ruff]
line-length = 88
target-version = "py310"

# Nouvelle syntaxe recommandée (future-proof)
[tool.ruff.lint]
select = [
    "E",  # Errors (PEP8)
    "F",  # Pyflakes
    "W",  # Warnings
    "I",  # Import sorting (isort)
]
ignore = [
    "E501",  # Line length (handled by Black)
]

# ======================================================
# 🧠 MYPY CONFIGURATION
# ======================================================
[tool.mypy]
python_version = "3.10"
strict = true                 # Typage strict (niveau entreprise)
warn_unused_configs = true
ignore_missing_imports = true # Pratique pour libs externes ML

# ======================================================
# 🚀 POETRY SCRIPTS (CLI shortcuts)
# ======================================================
[tool.poetry.scripts]
format = "black:main"

# ======================================================
# 🧰 TASKIPY – AUTOMATION COMMANDS
# ======================================================
[tool.taskipy.tasks]

# Trie les imports
sort = "isort ."

# Formatage du code
format = "black ."

# Lint (sans modification)
lint = "ruff check ."

# Auto-fix global (recommandé)
fix = "ruff check . --fix && task sort && task format"

# Typage statique
typecheck = "mypy src/"

# Pipeline qualité complet
quality = "task fix && task lint && task typecheck"

# ======================================================
# 🏗️ BUILD SYSTEM
# ======================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"