# ======================================================
# PROJECT METADATA (Poetry)
# ======================================================
[tool.poetry]
name = "health-lifestyle-diabetes"
version = "0.1.0"
description = "Clean Architecture project for diabetes prediction using health & lifestyle data."
authors = ["Manda Surel <s239150.eps@gmail.com>"]
readme = "README.md"

# Declare explicitly that source code lives in /src
packages = [
    { include = "health_lifestyle_diabetes", from = "src" },
]

# ======================================================
# RUNTIME DEPENDENCIES (Production)
# ======================================================
[tool.poetry.dependencies]

# Supported Python version
python = "^3.10"

# ------------------------------------------------------
# Scientific computing & data manipulation
# ------------------------------------------------------
numpy = "^1.26.0"
pandas = "^2.2.0"

# Machine Learning utilities
scikit-learn = "^1.4.0"

# ------------------------------------------------------
# Machine Learning models
# ------------------------------------------------------
xgboost = "^2.0.0"
catboost = "^1.2.0"
lightgbm = "^4.3.0"
# ------------------------------------------------------
# Configuration & validation
# ------------------------------------------------------
pyyaml = "^6.0.0"     # YAML file loading
pydantic = "^2.7.0"   # Strong typing & validation (configs / DTOs)

# ------------------------------------------------------
# API & CLI
# ------------------------------------------------------
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
click = "^8.1.0"

# ------------------------------------------------------
# UI & dashboards
# ------------------------------------------------------
streamlit = "^1.37.0"

# ------------------------------------------------------
# Logging
# ------------------------------------------------------
loguru = "^0.7.0"

# ------------------------------------------------------
# Experiment tracking & hyperparameter tuning
# ------------------------------------------------------
mlflow = "^3.7.0"
optuna = "^4.6.0"

# ------------------------------------------------------
# Visualization
# ------------------------------------------------------
seaborn = "^0.13.2"
kaleido = "^1.2.0"    # Export Plotly figures (PNG / PDF)

# ------------------------------------------------------
# Notebook support
# ------------------------------------------------------
nbformat = "^5.10.4"

# ======================================================
# DEVELOPMENT DEPENDENCIES (Dev only)
# ======================================================
[tool.poetry.group.dev.dependencies]

# Testing
pytest = "^8.0.0"

# Formatting & linting
black = "^24.0.0"
ruff = "^0.5.0"
isort = "^7.0.0"

# Static typing
mypy = "^1.10.0"

# Task runner
taskipy = "^1.14.1"

# ======================================================
# ISORT CONFIGURATION
# ======================================================
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["health_lifestyle_diabetes"]

# ======================================================
# BLACK CONFIGURATION
# ======================================================
[tool.black]
line-length = 88
target-version = ["py310"]

# ======================================================
# RUFF CONFIGURATION
# ======================================================
[tool.ruff]
line-length = 88
target-version = "py310"

# Recommended modern syntax
[tool.ruff.lint]
select = [
    "E",  # Errors (PEP8)
    "F",  # Pyflakes
    "W",  # Warnings
    "I",  # Import sorting (isort)
]
ignore = [
    "E501",  # Line length (handled by Black)
]

# ======================================================
# MYPY CONFIGURATION
# ======================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
ignore_missing_imports = true  # Practical for external ML libs

# ======================================================
# POETRY SCRIPTS (CLI shortcuts)
# ======================================================
[tool.poetry.scripts]
format = "black:main"

# ======================================================
# TASKIPY – AUTOMATION COMMANDS
# ======================================================
[tool.taskipy.tasks]

# Sort imports
sort = "isort ."

# Format code
format = "black ."

# Lint (no modification)
lint = "ruff check ."

# Global auto-fix (recommended)
fix = "ruff check . --fix && task sort && task format"

# Static typing
typecheck = "mypy src/"

# Full quality pipeline
quality = "task fix && task lint && task typecheck"

# ======================================================
# BUILD SYSTEM
# ======================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"